# AsusMouseBatteryIndicator

./: .gitignore  PLAN.md  README.md  install.sh  update.sh
.github/workflows/: build.yml  release.yml
daemon/: Cargo.toml
daemon/src/: main.rs  notification.rs  notifier.rs  predictor.rs
daemon/src/dbus/: device.rs  manager.rs  mod.rs
daemon/src/hid/: asus.rs  mod.rs
docs/: roadmap.md
docs/superpowers/plans/: 2026-05-09-gnome-extension.md
docs/superpowers/specs/: 2026-05-09-gnome-extension-design.md
gnome-extension/: extension.js  metadata.json  stylesheet.css  test-format.js
systemd/: mouse-battery.service
udev/: 99-mouse-battery.rules
